--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercato Imprese</title>
   <link rel="icon" type="image/png" href="logo.png">
+  <style>
+    body { font-family: Arial; background: #f5f5f5; margin: 0; padding: 0; }
+    header { background: #000; color: #fff; text-align: center; padding: 20px; }
+    .container { padding: 20px; }
+    .azienda { background: #fff; margin: 10px 0; padding: 10px; border-radius: 6px; }
+    footer { background: #000; color: #fff; text-align: center; padding: 10px; }
+  </style>
 </head>
 <body>
   <header>
-    <div class="logo">
-      <img src="logo.png" alt="Logo Mercato Imprese">
-    </div>
+    <img src="logo.png" alt="Logo" style="height: 50px;"><br>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Aziende</a>
-      <a href="#">Contatti</a>
-      <a href="#admin">Admin</a>
+      <a href="#">Home</a> |
+      <a href="#">Aziende</a> |
+      <a href="#">Contatti</a> |
+      <a href="#">Admin</a>
     </nav>
   </header>
   <div class="container">
     <h2>Elenco Aziende in Vendita</h2>
+    <div class="azienda">Ristorante - €150.000</div>
+    <div class="azienda">Startup Tech - €300.000</div>
   </div>
   <footer>
     &copy; 2025 Mercato Imprese - Tutti i diritti riservati
