--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     nav a { color:white; margin:0 10px; text-decoration:none; }
     .container { padding: 20px; }
     .azienda { background:white; margin:10px 0; padding:10px; border-radius:6px; }
+    .azienda img { max-width: 150px; display: block; margin-bottom: 8px; }
     .admin-box { max-width: 300px; margin: 20px auto; background: white; padding: 15px; border-radius: 6px; }
     footer { background:#000; color:#fff; text-align:center; padding:10px; }
   </style>
   <script>
     function showSection(section) {
-      document.getElementById("home").style.display = "none";
-      document.getElementById("aziende").style.display = "none";
-      document.getElementById("contatti").style.display = "none";
-      document.getElementById("admin").style.display = "none";
-      document.getElementById(section).style.display = "block";
+      ['home','aziende','contatti','admin'].forEach(id => {
+        document.getElementById(id).style.display = 'none';
+      });
+      document.getElementById(section).style.display = 'block';
     }
 
     function loginAdmin() {
@@ -38,9 +38,10 @@
     function aggiungiAzienda() {
       const nome = document.getElementById("nome").value;
       const prezzo = document.getElementById("prezzo").value;
+      const imgUrl = document.getElementById("immagine").value;
       const div = document.createElement("div");
       div.className = "azienda";
-      div.innerHTML = `<strong>${nome}</strong> - €${prezzo} <button onclick="this.parentNode.remove();salva()">Elimina</button>`;
+      div.innerHTML = `<img src="${imgUrl}" alt="Logo azienda"><strong>${nome}</strong> - €${prezzo} <button onclick="this.parentNode.remove();salva()">Elimina</button>`;
       document.getElementById("aziende-lista").appendChild(div);
       salva();
     }
@@ -103,8 +104,9 @@
     </div>
     <div id="admin-panel" style="display:none">
       <h3>Nuova Azienda</h3>
-      <input type="text" id="nome" placeholder="Nome azienda">
-      <input type="number" id="prezzo" placeholder="Prezzo">
+      <input type="text" id="nome" placeholder="Nome azienda"><br/>
+      <input type="number" id="prezzo" placeholder="Prezzo"><br/>
+      <input type="text" id="immagine" placeholder="URL immagine"><br/>
       <button onclick="aggiungiAzienda()">Aggiungi</button>
     </div>
   </div>
