--- a/index.html
+++ b/index.html
@@ -6,23 +6,89 @@
   <title>Mercato Imprese</title>
   <link rel="icon" type="image/png" href="logo.png">
   <style>
-    body { font-family: Arial; margin:0; background:#f5f5f5; }
-    header { background:#000; color:#fff; padding:20px; text-align:center; }
-    header img { height: 50px; }
-    nav a { color:white; margin:0 10px; text-decoration:none; }
-    .container { padding: 20px; }
-    .azienda { background:white; margin:10px 0; padding:10px; border-radius:6px; }
-    .azienda img { max-width: 150px; display: block; margin-bottom: 8px; }
-    .admin-box { max-width: 300px; margin: 20px auto; background: white; padding: 15px; border-radius: 6px; }
-    footer { background:#000; color:#fff; text-align:center; padding:10px; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background: #f0f2f5;
+      color: #333;
+    }
+    header {
+      background: #003366;
+      color: white;
+      padding: 30px 0;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    header img {
+      height: 70px;
+      margin-bottom: 10px;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 1rem;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 960px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    .azienda {
+      border-bottom: 1px solid #ccc;
+      padding: 15px 0;
+    }
+    .azienda:last-child {
+      border-bottom: none;
+    }
+    .azienda img {
+      max-width: 120px;
+      display: block;
+      margin-bottom: 10px;
+    }
+    footer {
+      background: #003366;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    .admin-box {
+      background: #fafafa;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 8px 0;
+      width: 100%;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    button {
+      background: #003366;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #005099;
+    }
   </style>
   <script>
     function showSection(section) {
-      document.getElementById("home").style.display = "none";
-      document.getElementById("aziende").style.display = "none";
-      document.getElementById("contatti").style.display = "none";
-      document.getElementById("admin").style.display = "none";
-      document.getElementById(section).style.display = "block";
+      ['home','aziende','contatti','admin'].forEach(id => {
+        document.getElementById(id).style.display = 'none';
+      });
+      document.getElementById(section).style.display = 'block';
     }
 
     function loginAdmin() {
@@ -42,7 +108,7 @@
       const imgUrl = document.getElementById("immagine").value;
       const div = document.createElement("div");
       div.className = "azienda";
-      div.innerHTML = `<img src="${imgUrl}" alt="Immagine"><strong>${nome}</strong> - €${prezzo} <button onclick="this.parentNode.remove();salva()">Elimina</button>`;
+      div.innerHTML = `<img src="${imgUrl}" alt=""><strong>${nome}</strong> - €${prezzo} <button onclick="this.parentNode.remove();salva()">Elimina</button>`;
       document.getElementById("aziende-lista").appendChild(div);
       salva();
     }
@@ -72,7 +138,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo"/><br/>
+    <img src="logo.png" alt="Logo Mercato Imprese"/>
     <nav>
       <a href="#" onclick="showSection('home')">Home</a>
       <a href="#" onclick="showSection('aziende')">Aziende</a>
@@ -83,7 +149,7 @@
 
   <div class="container" id="home">
     <h2>Benvenuto su Mercato Imprese</h2>
-    <p>La piattaforma per comprare e vendere attività.</p>
+    <p>La piattaforma per comprare e vendere attività in modo semplice, veloce e professionale.</p>
   </div>
 
   <div class="container" id="aziende" style="display:none">
@@ -99,15 +165,15 @@
   <div class="container" id="admin" style="display:none">
     <h2>Area Admin</h2>
     <div class="admin-box">
-      <input type="text" id="user" placeholder="Username"><br/><br/>
-      <input type="password" id="pass" placeholder="Password"><br/><br/>
+      <input type="text" id="user" placeholder="Username">
+      <input type="password" id="pass" placeholder="Password">
       <button onclick="loginAdmin()">Accedi</button>
     </div>
     <div id="admin-panel" style="display:none">
       <h3>Nuova Azienda</h3>
-      <input type="text" id="nome" placeholder="Nome azienda"><br/>
-      <input type="number" id="prezzo" placeholder="Prezzo"><br/>
-      <input type="text" id="immagine" placeholder="URL immagine"><br/>
+      <input type="text" id="nome" placeholder="Nome azienda">
+      <input type="number" id="prezzo" placeholder="Prezzo">
+      <input type="text" id="immagine" placeholder="URL immagine">
       <button onclick="aggiungiAzienda()">Aggiungi</button>
     </div>
   </div>
