--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #f0f2f5;
+      background: #fefefe;
       color: #333;
     }
     header {
-      background: #003366;
+      background: linear-gradient(to right, #003366, #006699);
       color: white;
       padding: 30px 0;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
     header img {
-      height: 70px;
+      height: 90px;
       margin-bottom: 10px;
     }
     nav a {
       color: white;
-      margin: 0 15px;
+      margin: 0 20px;
       text-decoration: none;
-      font-weight: 500;
-      font-size: 1rem;
+      font-weight: bold;
+      font-size: 1.1rem;
     }
     nav a:hover {
       text-decoration: underline;
@@ -37,31 +37,31 @@
       max-width: 960px;
       margin: 40px auto;
       padding: 20px;
-      background: white;
+      background: #ffffff;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
     .azienda {
-      border-bottom: 1px solid #ccc;
-      padding: 15px 0;
-    }
-    .azienda:last-child {
-      border-bottom: none;
+      background: #f1f8ff;
+      border-left: 5px solid #007acc;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
     }
     .azienda img {
-      max-width: 120px;
+      max-width: 150px;
       display: block;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
     footer {
-      background: #003366;
+      background: #222;
       color: white;
       text-align: center;
       padding: 20px;
       margin-top: 40px;
     }
     .admin-box {
-      background: #fafafa;
+      background: #fff4e6;
       padding: 20px;
       border-radius: 8px;
     }
@@ -74,13 +74,13 @@
       font-size: 1rem;
     }
     button {
-      background: #003366;
+      background: #007acc;
       color: white;
       border: none;
       cursor: pointer;
     }
     button:hover {
-      background: #005099;
+      background: #005fa3;
     }
   </style>
   <script>
@@ -149,7 +149,7 @@
 
   <div class="container" id="home">
     <h2>Benvenuto su Mercato Imprese</h2>
-    <p>La piattaforma per comprare e vendere attività in modo semplice, veloce e professionale.</p>
+    <p>La piattaforma per comprare e vendere attività con professionalità e un tocco di colore.</p>
   </div>
 
   <div class="container" id="aziende" style="display:none">
