--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #fefefe;
+      background: #f9f9f9;
       color: #333;
     }
     header {
-      background: linear-gradient(to right, #003366, #006699);
+      background: linear-gradient(to right, #004080, #007acc);
       color: white;
-      padding: 30px 0;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      padding: 40px 20px;
     }
     header img {
-      height: 90px;
-      margin-bottom: 10px;
+      max-width: 320px;
+      width: 80%;
+      margin-bottom: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
     nav a {
       color: white;
-      margin: 0 20px;
+      margin: 0 18px;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
@@ -37,21 +40,21 @@
       max-width: 960px;
       margin: 40px auto;
       padding: 20px;
-      background: #ffffff;
+      background: white;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
     .azienda {
-      background: #f1f8ff;
-      border-left: 5px solid #007acc;
-      padding: 15px;
+      background: #eef6ff;
+      border-left: 4px solid #007acc;
+      padding: 12px;
       margin-bottom: 15px;
       border-radius: 8px;
     }
     .azienda img {
-      max-width: 150px;
+      max-width: 160px;
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
     footer {
       background: #222;
@@ -61,7 +64,7 @@
       margin-top: 40px;
     }
     .admin-box {
-      background: #fff4e6;
+      background: #fff9e6;
       padding: 20px;
       border-radius: 8px;
     }
@@ -149,7 +152,7 @@
 
   <div class="container" id="home">
     <h2>Benvenuto su Mercato Imprese</h2>
-    <p>La piattaforma per comprare e vendere attività con professionalità e un tocco di colore.</p>
+    <p>La piattaforma per comprare e vendere attività con professionalità e visibilità.</p>
   </div>
 
   <div class="container" id="aziende" style="display:none">
