--- a/index.html
+++ b/index.html
@@ -1,117 +1,1 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mercato Imprese</title>
-  <link rel="icon" href="logo.png">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
-    header { background: linear-gradient(to right, #004080, #007acc); color: white; padding: 30px 0; text-align: center; }
-    header img { max-width: 300px; width: 90%; margin-bottom: 10px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; font-size: 1rem; }
-    .container { max-width: 960px; margin: 30px auto; padding: 20px; background: #fff; border-radius: 10px; }
-    .azienda { background: #eef6ff; border-left: 4px solid #007acc; margin-bottom: 10px; padding: 10px; border-radius: 5px; }
-    .azienda img { max-width: 150px; margin-bottom: 5px; }
-    .admin-box { background: #fff9e6; padding: 15px; border-radius: 8px; }
-    input, button, label, select { width: 100%; padding: 10px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; }
-    button { background: #007acc; color: white; cursor: pointer; }
-    footer { background: #222; color: white; text-align: center; padding: 15px; margin-top: 40px; }
-  </style>
-  <script>
-    function showSection(section) {
-      ['home','aziende','contatti','admin'].forEach(id => {
-        document.getElementById(id).style.display = 'none';
-      });
-      document.getElementById(section).style.display = 'block';
-    }
-
-    function loginAdmin() {
-      const u = document.getElementById("user").value;
-      const p = document.getElementById("pass").value;
-      if (u === "admin" && p === "admin123") {
-        document.getElementById("admin-panel").style.display = "block";
-        alert("Accesso effettuato");
-      } else {
-        alert("Credenziali errate");
-      }
-    }
-
-    function aggiungiAzienda() {
-      const nome = document.getElementById("nome").value;
-      const prezzo = document.getElementById("prezzo").value;
-      const fileInput = document.getElementById("file");
-      const file = fileInput.files[0];
-      const div = document.createElement("div");
-      div.className = "azienda";
-
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          let content = "";
-          if (file.type.startsWith("image/")) {
-            content = `<img src="${e.target.result}" alt=""><br/>`;
-          } else {
-            content = `<a href="${e.target.result}" target="_blank">Visualizza PDF</a><br/>`;
-          }
-          div.innerHTML = content + `<strong>${nome}</strong> - €${prezzo} <button onclick="this.parentNode.remove()">Elimina</button>`;
-          document.getElementById("aziende-lista").appendChild(div);
-        };
-        reader.readAsDataURL(file);
-      } else {
-        div.innerHTML = `<strong>${nome}</strong> - €${prezzo} <button onclick="this.parentNode.remove()">Elimina</button>`;
-        document.getElementById("aziende-lista").appendChild(div);
-      }
-    }
-
-    window.onload = () => showSection('home');
-  </script>
-</head>
-<body>
-  <header>
-    <img src="logo.png" alt="Logo">
-    <nav>
-      <a href="#" onclick="showSection('home')">Home</a>
-      <a href="#" onclick="showSection('aziende')">Aziende</a>
-      <a href="#" onclick="showSection('contatti')">Contatti</a>
-      <a href="#" onclick="showSection('admin')">Admin</a>
-    </nav>
-  </header>
-
-  <div class="container" id="home">
-    <h2>Benvenuto su Mercato Imprese</h2>
-    <p>La piattaforma per comprare e vendere attività in Italia.</p>
-  </div>
-
-  <div class="container" id="aziende" style="display:none;">
-    <h2>Aziende in Vendita</h2>
-    <div id="aziende-lista"></div>
-  </div>
-
-  <div class="container" id="contatti" style="display:none;">
-    <h2>Contattaci</h2>
-    <p>Email: <a href="mailto:mercatoimprese@gmail.com">mercatoimprese@gmail.com</a></p>
-    <p>Cellulare: <a href="tel:+393207421395">+39 320 7421395</a></p>
-  </div>
-
-  <div class="container" id="admin" style="display:none;">
-    <h2>Area Admin</h2>
-    <div class="admin-box">
-      <input id="user" type="text" placeholder="Username">
-      <input id="pass" type="password" placeholder="Password">
-      <button onclick="loginAdmin()">Accedi</button>
-    </div>
-    <div id="admin-panel" style="display:none;">
-      <h3>Nuova Azienda</h3>
-      <input id="nome" type="text" placeholder="Nome azienda">
-      <input id="prezzo" type="number" placeholder="Prezzo">
-      <input id="file" type="file" accept=".jpg,.jpeg,.png,.pdf">
-      <button onclick="aggiungiAzienda()">Aggiungi</button>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 Mercato Imprese - Tutti i diritti riservati
-  </footer>
-</body>
-</html>
+<!-- index.html placeholder, sarà aggiornato -->
