--- a/index.html
+++ b/index.html
@@ -1,138 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mercato Imprese</title>
-  <link rel="icon" href="logo.png" />
-  <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; }
-    header { background: linear-gradient(to right, #004080, #007acc); color: white; padding: 30px; text-align: center; }
-    header img { max-width: 300px; margin-bottom: 10px; }
-    nav a { color: white; margin: 0 10px; text-decoration: none; font-weight: bold; }
-    .container { max-width: 900px; margin: 30px auto; background: #fff; padding: 20px; border-radius: 8px; }
-    .azienda { background: #eef6ff; padding: 10px; border-left: 4px solid #007acc; border-radius: 5px; margin-bottom: 10px; }
-    .azienda img { max-width: 150px; display: block; margin-bottom: 10px; }
-    .admin-box { background: #fff9e6; padding: 15px; border-radius: 8px; }
-    input, button { width: 100%; padding: 10px; margin: 5px 0; border-radius: 6px; border: 1px solid #ccc; }
-    button { background: #007acc; color: white; cursor: pointer; }
-    footer { background: #222; color: white; text-align: center; padding: 15px; margin-top: 40px; }
-  </style>
-  <script>
-    let admin = false;
-    const API = "https://script.google.com/macros/s/AKfycbw-bQW8upTP3FzYGRYEz4LeoXfXYdPYj-K_SI6f8AaobJMxgJgKfWHKQV6LZp6MfITG/exec";
-
-    function showSection(id) {
-      ['home', 'aziende', 'contatti', 'admin'].forEach(sec => {
-        document.getElementById(sec).style.display = 'none';
-      });
-      document.getElementById(id).style.display = 'block';
-    }
-
-    function loginAdmin() {
-      const user = document.getElementById("user").value;
-      const pass = document.getElementById("pass").value;
-      if (user === "admin" && pass === "admin123") {
-        admin = true;
-        document.getElementById("admin-panel").style.display = "block";
-        alert("Accesso effettuato");
-      } else {
-        alert("Credenziali errate");
-      }
-    }
-
-    function aggiungiAzienda() {
-      const nome = document.getElementById("nome").value;
-      const prezzo = document.getElementById("prezzo").value;
-      const file = document.getElementById("file").files[0];
-      const reader = new FileReader();
-      reader.onload = function(e) {
-        const fileData = e.target.result;
-        fetch(API, {
-          method: "POST",
-          body: JSON.stringify({ nome: nome, prezzo: prezzo, file: fileData }),
-          headers: { "Content-Type": "application/json" }
-        }).then(() => {
-          alert("Azienda salvata!");
-          location.reload();
-        });
-      };
-      if (file) reader.readAsDataURL(file);
-    }
-
-    function caricaAziende() {
-      fetch(API)
-        .then(res => res.json())
-        .then(data => {
-          const container = document.getElementById("aziende-lista");
-          data.forEach(item => {
-            const div = document.createElement("div");
-            div.className = "azienda";
-            let content = "";
-            if (item.file.includes("data:image")) {
-              content += `<img src="${item.file}" alt="">`;
-            } else {
-              content += `<a href="${item.file}" target="_blank">Visualizza PDF</a><br>`;
-            }
-            content += `<strong>${item.nome}</strong> - €${item.prezzo}`;
-            div.innerHTML = content;
-            container.appendChild(div);
-          });
-        });
-    }
-
-    window.onload = function() {
-      showSection('home');
-      caricaAziende();
-    };
-  </script>
-</head>
-<body>
-  <header>
-    <img src="logo.png" alt="Logo Mercato Imprese" />
-    <nav>
-      <a href="#" onclick="showSection('home')">Home</a>
-      <a href="#" onclick="showSection('aziende')">Aziende</a>
-      <a href="#" onclick="showSection('contatti')">Contatti</a>
-      <a href="#" onclick="showSection('admin')">Admin</a>
-    </nav>
-  </header>
-
-  <div class="container" id="home">
-    <h2>Benvenuto su Mercato Imprese</h2>
-    <p>Piattaforma per comprare e vendere aziende online, con salvataggio permanente.</p>
-  </div>
-
-  <div class="container" id="aziende" style="display:none;">
-    <h2>Aziende in Vendita</h2>
-    <div id="aziende-lista"></div>
-  </div>
-
-  <div class="container" id="contatti" style="display:none;">
-    <h2>Contattaci</h2>
-    <p>Email: <a href="mailto:mercatoimprese@gmail.com">mercatoimprese@gmail.com</a></p>
-    <p>Cellulare: <a href="tel:+393207421395">+39 320 7421395</a></p>
-  </div>
-
-  <div class="container" id="admin" style="display:none;">
-    <h2>Area Admin</h2>
-    <div class="admin-box">
-      <input type="text" id="user" placeholder="Username" />
-      <input type="password" id="pass" placeholder="Password" />
-      <button onclick="loginAdmin()">Accedi</button>
-    </div>
-    <div id="admin-panel" style="display:none;">
-      <h3>Nuova Azienda</h3>
-      <input type="text" id="nome" placeholder="Nome azienda" />
-      <input type="number" id="prezzo" placeholder="Prezzo" />
-      <input type="file" id="file" accept=".jpg,.jpeg,.png,.pdf" />
-      <button onclick="aggiungiAzienda()">Aggiungi</button>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 Mercato Imprese - Tutti i diritti riservati
-  </footer>
-</body>
-</html>
+<!-- index placeholder -->
