--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Mercato Imprese</title></head><body><script>const API='https://script.google.com/macros/s/AKfycbyGfi6bn5DvTAetZoV3Gy3kSG-rKahtEKnaz5EmW3PwuzW84g4bqpbWHz3UxH1qYY0/exec';</script><p>Pagina base</p></body></html>
+
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mercato Imprese</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
+    header { background: #005baa; color: white; padding: 20px; text-align: center; }
+    nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: bold; }
+    .container { padding: 20px; text-align: center; }
+    footer { background: #222; color: white; text-align: center; padding: 15px; position: fixed; width: 100%; bottom: 0; }
+    .logo { max-width: 300px; margin: 10px auto; display: block; }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="logo.png" alt="Logo Mercato Imprese" class="logo" />
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Aziende</a>
+      <a href="#">Contatti</a>
+      <a href="#">Admin</a>
+    </nav>
+  </header>
+  <div class="container">
+    <h1>Benvenuto su Mercato Imprese</h1>
+    <p>Piattaforma per comprare e vendere attività con professionalità e un tocco di colore.</p>
+  </div>
+  <footer>
+    &copy; 2025 Mercato Imprese - Tutti i diritti riservati
+  </footer>
+</body>
+</html>
